# monda

./: .gitignore
docs/: informal.md
handmade/: Makefile  hello.ll  hello.mda
hask/: CHANGELOG.md  monda-hask.cabal
hask/app/: Main.hs
